# my-http-server

./: .gitignore  Cargo.toml  HTTP_ACTIONS_DESIGN.md  README.md  build.rs
my-http-server/: Cargo.toml
my-http-server-controllers/: Cargo.toml
my-http-server-controllers/src/: lib.rs
my-http-server-controllers/src/controllers/: actions.rs  auth_error_factory.rs  authorization.rs  authorization_map.rs  middleware.rs  mod.rs  request_reader.rs  required_claims.rs
my-http-server-controllers/src/controllers/documentation/: action_description_provider.rs  mod.rs
my-http-server-controllers/src/controllers/http_route/: mod.rs  (+3 more)
my-http-server-controllers/src/data_types/: mod.rs  password_http_input.rs
my-http-server-controllers/src/swagger/: middleware.rs
my-http-server-core/: Cargo.toml
my-http-server-core/src/: body_data_reader.rs  cached_headers.rs  convert_from_str.rs  cookie_jar.rs  data_src.rs  encoded_value.rs  errors.rs  http_ctx.rs  http_fail_result.rs  http_headers.rs  http_headers_to_use.rs  http_ok_result.rs  http_ok_result_builder.rs  http_output.rs  http_path.rs  http_request.rs  http_request_body.rs  http_server.rs  http_server_data.rs  http_server_middleware.rs  input_param_value.rs  lib.rs  my_http_server_hyper_request.rs  request_ip.rs  utils.rs  web_content_type.rs
my-http-server-core/src/body_data_reader/: body_data_reader.rs  mappers.rs  mod.rs
my-http-server-core/src/cookies/: cookie.rs  cookie_jar.rs  mod.rs
my-http-server-core/src/encoded_value/: encoded_value.rs  mappers.rs  mod.rs
my-http-server-core/src/form_data_reader/: content_disposition_parser.rs  content_iterator.rs  form_data_item.rs  form_data_mappers.rs  form_data_reader.rs  mappers.rs  mod.rs
my-http-server-core/src/http_headers/: common_headers.rs  header_value.rs  headers.rs  mod.rs
my-http-server-core/src/http_ok_result/: http_ok_result.rs  http_ok_result_builder.rs  http_result_builder.rs  mod.rs
my-http-server-core/src/http_output/: http_output.rs  http_output_as_stream.rs  http_output_producer.rs  http_response_headers.rs  mod.rs
my-http-server-core/src/http_request/: body_content_type.rs  body_data_reader.rs  content_encoding.rs  cookies_reader.rs  http_path_reader.rs  http_request.rs  http_request_body_mode.rs  http_request_content.rs  mod.rs  my_hyper_http_request.rs  request_body.rs  request_data.rs
my-http-server-core/src/json_encoded_data/: json_encoded_data.rs  json_encoded_value_as_string.rs
my-http-server-core/src/static_files_middleware/: static_files.rs
my-http-server-core/src/types/: file_content.rs  hash_map.rs  mod.rs  raw_data.rs  raw_data_typed.rs
my-http-server-core/src/url_encoded_data/: convert_error.rs  mod.rs  url_encoded_data.rs
my-http-server-macros/: Cargo.toml
my-http-server-macros/src/: as_token_stream.rs  consts.rs  generic_utils.rs  lib.rs  property_type_ext.rs  types.rs
my-http-server-macros/src/action_builder/: action_builder.rs  generate_http_action_description_fn.rs
my-http-server-macros/src/attributes/: _default.rs  default.rs  enum_case.rs  http_body.rs  http_body_raw.rs  http_form_data.rs  http_header.rs  http_path.rs  http_query.rs  ignore.rs  mod.rs
my-http-server-macros/src/enum_doc/: enum_json.rs  generate.rs  impl_from_i32.rs  impl_from_str_trait.rs
my-http-server-macros/src/http_input_field/: generate.rs
my-http-server-macros/src/http_input_object_structure/: generate.rs  mod.rs  struct_prop_ext.rs
my-http-server-macros/src/http_object_structure/: generate.rs  generate_crate_http_object_structure.rs  generate_data_provider.rs  struct_prop_ext.rs
my-http-server-macros/src/http_route/: action_builder.rs  generate_handle_request_fn.rs  generate_http_action_description_fn.rs  result_model_generator.rs
my-http-server-macros/src/input_models/: default_value.rs  docs.rs  generate.rs  http_field_attr.rs  http_input_default_value.rs  http_input_props.rs  input_field.rs  mod.rs
my-http-server-signal-r-middleware/: Cargo.toml
my-http-server-signal-r-middleware/src/: lib.rs  middleware.rs  middleware_builder.rs  my_signal_r_action_callback.rs  my_signal_r_actions.rs  my_signal_r_callbacks.rs  process_connect.rs  process_disconnect.rs  signal_r_connection.rs  signal_r_connections_list.rs  signal_r_liveness_loop.rs  signal_r_message_publisher.rs  signal_r_publishers_builder.rs  signal_r_serializer.rs  signal_r_telemetry.rs  tags.rs  web_socket_callbacks.rs
my-http-server-signal-r-middleware/src/messages/: payloads_generations.rs  signalr_message.rs
my-http-server-signalr-middleware/: Cargo.toml
my-http-server-signalr-middleware/src/: lib.rs  middleware.rs  my_signal_r_action_callback.rs  my_signal_r_actions.rs  my_signal_r_callbacks.rs  process_disconnect.rs  signal_r_connections_list.rs  signal_r_liveness_loop.rs  signal_r_message_publisher.rs  web_socket_callbacks.rs
my-http-server-socket-io-middleware/: Cargo.toml
my-http-server-socket-io-middleware/src/: handle_long_pool.rs  lib.rs  middleware.rs  my_socket_io_callbacks.rs  my_socket_io_connection.rs  my_socket_io_connections_callbacks.rs  process_connect.rs  process_disconnect.rs  socket_io_livness_loop.rs  web_socket_callbacks.rs
my-http-server-test/: Cargo.toml
my-http-server-test/src/: main.rs
my-http-server-test/src/http/: builder.rs  start_up.rs
my-http-server-test/src/tests/: mod.rs  test_defaults.rs  test_http_input_email_field.rs  test_http_input_password_field.rs  test_string_enum_defaults.rs  test_to_lower_case.rs  test_trim.rs  test_with_enum_default.rs
my-http-server-web-sockets/: Cargo.toml
my-http-server-web-sockets/src/: helpers.rs  lib.rs  my_web_socket.rs  my_web_socket_callback.rs  my_web_socket_http_request.rs  my_websocket_middleware.rs  web_sockets_upgrade.rs
my-http-server/src/: lib.rs
my-http-utils/: Cargo.toml
static-files-middleware/: Cargo.toml
static-files-middleware/src/: compression.rs  deflate.rs  etag_caches.rs  file_mapping.rs  files_access.rs  lib.rs  middleware.rs  no_cache.rs  root_paths.rs
tests/: Cargo.toml
tests/src/: lib.rs  test_http_input.rs  test_macros_split.rs  test_parse_e2e.rs
(+209 files in other folders)
