[package]
name = "my-http-server"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
static-files = []
cache-headers-before-receive-body = []
my-telemetry = ["dep:my-telemetry"]


[dependencies]
rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }

my-json = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-json.git" }

my-telemetry = { tag = "0.3.0", git = "https://github.com/MyJetTools/my-telemetry.git", optional = true }

url-utils = { tag = "0.1.0", git = "https://github.com/MyJetTools/url-utils.git" }

tokio = { version = "*", features = ["full"] }

lazy_static = "*"
hyper = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
async-trait = "*"
