[package]
name = "my-http-server-controllers"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[dependencies]
my-http-server-core = { path = "../my-http-server-core" }
url-utils = { tag = "0.2.0", git = "https://github.com/MyJetTools/url-utils.git" }
tokio = { version = "*" }
async-trait = "*"
hyper = { version = "*" }
rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git" }
serde = { version = "*", features = ["derive"] }
