[package]
name = "my-http-server-core"
version = "0.8.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
with-telemetry = ["dep:my-telemetry"]


[dependencies]
rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "with-tokio",
] }

my-json = { tag = "0.2.4", git = "https://github.com/MyJetTools/my-json.git" }

my-telemetry = { tag = "1.1.1", git = "https://github.com/MyJetTools/my-telemetry.git", optional = true }

url-utils = { tag = "0.1.2", git = "https://github.com/MyJetTools/url-utils.git" }

tokio = { version = "*", features = ["full"] }

lazy_static = "*"
hyper = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
async-trait = "*"
http-body-util = "*"
hyper-util = { version = "*", features = ["tokio"] }
