[package]
name = "my-http-server-macros"
version = "0.8.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "*", features = ["extra-traits"] }
quote = "*"
types-reader = { tag = "0.5.1", git = "https://github.com/MyJetTools/types-reader.git" }


proc-macro2 = "*"
