[package]
name = "my-http-server-signal-r-middleware"
version = "0.8.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["with-telemetry"]
debug-ws = []
with-telemetry = ["dep:my-telemetry"]


[dependencies]
my-http-server-core = { path = "../my-http-server-core" }
my-http-server-web-sockets = { path = "../my-http-server-web-sockets" }
rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "with-tokio",
] }
my-json = { tag = "0.3.1", git = "https://github.com/MyJetTools/my-json.git" }


my-telemetry = { tag = "1.2.1", git = "https://github.com/MyJetTools/my-telemetry.git", optional = true }

tokio = { version = "*", features = ["full"] }
async-trait = "*"
hyper = { version = "*", features = ["full"] }
tokio-tungstenite = "*"
futures = "*"
uuid = { version = "*", features = ["serde", "v4"] }
