[package]
name = "my-http-server-signalr-middleware"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug-ws = []
with-telemetry = ["dep:my-telemetry"]


[dependencies]
my-http-server-core = { path = "../my-http-server-core" }
my-http-server-web-sockets = { path = "../my-http-server-web-sockets" }
rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }
my-json = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-json.git" }


my-telemetry = { tag = "0.3.0", git = "https://github.com/MyJetTools/my-telemetry.git", optional = true }

tokio = { version = "*", features = ["full"] }
async-trait = "*"
hyper = { version = "*", features = ["full"] }
hyper-tungstenite = "*"
futures = "*"
uuid = { version = "*", features = ["serde", "v4"] }
