[package]
name = "my-http-server-socket-io-middleware"
version = "0.8.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug-ws = []

[dependencies]
my-http-server = { path = "../my-http-server-core" }
my-http-server-web-sockets = { path = "../my-http-server-web-sockets" }
socket-io-utils = { tag = "0.1.2", git = "https://github.com/MyJetTools/socket-io-utils.git" }
rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git" }
my-json = { tag = "0.3.1", git = "https://github.com/MyJetTools/my-json.git" }
tokio = { version = "*", features = ["full"] }
async-trait = "*"
hyper = { version = "*", features = ["full"] }
hyper-tungstenite = "*"
futures = "*"
uuid = { version = "*", features = ["serde", "v4"] }
