[package]
name = "my-http-server-web-sockets"
version = "0.6.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
my-http-server-core = { path = "../my-http-server-core" }
tokio = { version = "*", features = ["full"] }
async-trait = "*"
hyper = { version = "0.14.27", features = ["full"] }
hyper-tungstenite = "0.11.1"
futures = "*"
