[package]
name = "my-http-server-web-sockets"
version = "0.8.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

my-http-server-core = { path = "../my-http-server-core" }
tokio = { version = "*", features = ["full"] }
async-trait = "*"
hyper = { version = "*", features = ["full"] }
futures = "*"
pin-project-lite = "*"
hyper-tungstenite = "*"
http-body-util = "*"
hyper-util = { version = "*", features = ["tokio"] }
tokio-util = { version = "*", features = ["compat"] }
futures-util = "*"
rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git" }
