[package]
name = "my-http-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
full = [
    "controllers",
    "macros",
    "websocket",
    "signal-r",
    "with-telemetry",
    "static-files",
]
controllers = ["my-http-server-controllers"]
macros = ["my-http-server-swagger", "my-http-server-controllers"]
websocket = ["my-http-server-web-sockets"]
signal-r = ["my-http-server-signal-r-middleware", "signal-r-macros"]
with-telemetry = [
    "my-http-server-core/with-telemetry",
    "my-http-server-signal-r-middleware?/with-telemetry",
]

static-files = ["static-files-middleware"]


[dependencies]
my-http-server-swagger = { optional = true, path = "../my-http-server-swagger" }
my-http-server-web-sockets = { optional = true, path = "../my-http-server-web-sockets" }
my-http-server-signal-r-middleware = { optional = true, path = "../my-http-server-signal-r-middleware" }
my-http-server-controllers = { optional = true, path = "../my-http-server-controllers" }
my-http-server-core = { path = "../my-http-server-core" }
signal-r-macros = { optional = true, path = "../signal-r-macros" }
static-files-middleware = { path = "../static-files-middleware", optional = true }
