[package]
name = "my-http-server"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
full = [
    "controllers",
    "macros",
    "websocket",
    "signal-r",
    "with-telemetry",
    "static-files",
]
controllers = ["my-http-server-controllers"]
macros = ["my-http-server-macros", "my-http-server-controllers"]
websocket = ["my-http-server-web-sockets"]
signal-r = ["my-http-server-signal-r-middleware", "signal-r-macros"]
socket-io = ["my-http-server-socket-io-middleware"]
with-telemetry = [
    "my-http-server-core/with-telemetry",
    "my-http-server-signal-r-middleware?/with-telemetry",
]

static-files = ["static-files-middleware"]


[dependencies]
my-http-server-macros = { optional = true, path = "../my-http-server-macros" }
my-http-server-web-sockets = { optional = true, path = "../my-http-server-web-sockets" }
my-http-server-signal-r-middleware = { optional = true, path = "../my-http-server-signal-r-middleware" }
my-http-server-socket-io-middleware = { optional = true, path = "../my-http-server-socket-io-middleware" }
my-http-server-controllers = { optional = true, path = "../my-http-server-controllers" }
my-http-server-core = { path = "../my-http-server-core" }
my-http-utils = { tag = "0.1.0", git = "https://github.com/MyJetTools/my-http-utils.git" }
signal-r-macros = { optional = true, path = "../signal-r-macros" }
static-files-middleware = { path = "../static-files-middleware", optional = true }
