[package]
name = "my-http-utils"
version = "0.8.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-extensions = { tag = "1.0.4", git = "https://github.com/MyJetTools/rust-extensions.git" }

tokio = { version = "*" }
lazy_static = "*"
hyper = { version = "*" }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
async-trait = "*"
