[package]
name = "static-files-middleware"
version = "0.6.2-rc01"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
my-http-server-core = { path = "../my-http-server-core" }
async-trait = "*"
tokio = { version = "*", features = ["full"] }
