[package]
name = "tests"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
my-http-server = { path = "../my-http-server", features = [
    "controllers",
    "macros",
] }

serde = { version = "*", features = ["derive"] }
serde_json = "*"
my-http-utils = { tag = "0.1.0", git = "https://github.com/MyJetTools/my-http-utils.git" }
